--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -5,143 +5,185 @@
 
         </div> -->
 
-
-
 <section class="home-section">
-    <br>
-       
-        
-            <div class="columns container m-auto bg-danger justify-content-around">
-        
-                <div class="column text-center bg-warning d-flex justify-content-center">
-                
-                    <div class="caption text-center bg-primary m-auto">
-                        ¿LISTO PA' <br>
-                        <div class="text-box">
-                            <div>EXPANDIR</div>
-                            <div>DESPEGAR</div>
-                            <div>MODERNIZAR</div>
-                        </div> <br>
-                        TU MARCA<br> <br>
-                        <div class="text-center">
-                            <button class="btn-form text-center" routerLink="/form"> ¡Hagámoslo!</button>
-                        </div>
-                    </div>
-            
-                </div>
+  <br />
+  <!-- <div class="columns container m-auto bg-danger justify-content-around"> -->
+  <div class="container columns__container m-auto">
+    <div class="columns">
+      <!-- <div class="column text-center bg-warning d-flex justify-content-center"> -->
+      <div class="column" id="column__left">
+        <div class="caption">
+          ¿LISTO PA' <br />
 
-                <div class="column bg-primary">
-                    
-                        <div class=" max-logo ">   
-                        <img src="./assets/img/Onspace_wave.png" class="img-fluid"
-                            alt="Onspace">
-                            </div>
-                </div>
-        
-            </div>
-        
-        
-<br>
-        <div class="container">
-            <div class="waves">       
-                <div class="wave">
+          <div class="text-box">
+            <div>EXPANDIR</div>
+            <div>DESPEGAR</div>
+            <div>MODERNIZAR</div>
+          </div>
+          <br />
+          TU MARCA
+          <br />
+          <br />
 
-                </div>
-            </div>
+          <div class="text-center">
+            <button class="btn-form text-center" routerLink="/form">
+              ¡Hagámoslo!
+            </button>
+          </div>
         </div>
+      </div>
 
+      <div class="column" id="column__right">
+        <div class="max-logo">
+          <img
+            src="./assets/img/Onspace_wave.png"
+            class="img-fluid"
+            alt="Onspace"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br />
+  <div class="container">
+    <div class="waves">
+      <div class="wave"></div>
+    </div>
+  </div>
 </section>
-
 
 <section class="services-section">
-<br><br> <br><br> <br><br><br> <br> <br><br><br><br> <br><br>
-    <div>
-        <h1 class="text-center">Servicios</h1> <br>
+  <br /><br />
+  <br /><br />
+  <br /><br /><br />
+  <br />
+  <br /><br /><br /><br />
+  <br /><br />
+  <div>
+    <h1 class="text-center">Servicios</h1>
+    <br />
+  </div>
+  <div class="services">
+    <div class="card-grid">
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+        ></div>
+      </li>
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+        ></div>
+      </li>
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+        ></div>
+      </li>
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+        ></div>
+      </li>
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+        ></div>
+      </li>
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+        ></div>
+      </li>
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+        ></div>
+      </li>
+      <li class="card-services">
+        <div
+          class="card__background"
+          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+        ></div>
+      </li>
     </div>
-    <div class="services">
-        <div class="card-grid">
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(./assets/img/Services-img/prueba_1.png)">
-                </div>
-            </li>
-            <li class="card-services">
-                <div class="card__background" style="background-image: url(./assets/img/Services-img/prueba_1.png)">
-                </div>
-            </li>
-            <li class="card-services">
-                <div class="card__background" style="background-image: url(./assets/img/Services-img/prueba_1.png)">
-                </div>
-            </li>
-            <li class="card-services">
-                <div class="card__background" style="background-image: url(./assets/img/Services-img/prueba_1.png)">
-                </div>
-            </li>
-            <li class="card-services">
-                <div class="card__background" style="background-image: url(./assets/img/Services-img/prueba_2.png)">
-                </div>
-            </li>
-            <li class="card-services">
-                <div class="card__background" style="background-image: url(./assets/img/Services-img/prueba_2.png)">
-                </div>
-            </li>
-            <li class="card-services">
-                <div class="card__background" style="background-image: url(./assets/img/Services-img/prueba_2.png)">
-                </div>
-            </li>
-            <li class="card-services">
-                <div class="card__background" style="background-image: url(./assets/img/Services-img/prueba_2.png)">
-                </div>
-            </li>
-        </div>
-    
-    </div>
+  </div>
 
-    <br><br><br><br>
+  <br /><br /><br /><br />
 </section>
 
-
-
 <section class="ours">
-    
+  <br />
+  <h1 class="text-center">Quienes somos?</h1>
+  <br />
 
-        <br><h1 class="text-center">Quienes somos?</h1> <br>
-
-        <p class="text-center text-ours" >¡Es un placer saludarte! Somos Onspace, una agencia de publicidad especializada en potencializar marcas tanto en el
-        ámbito físico como digital, con el objetivo de mejorar su presencia y apariencia para lograr su posicionamiento en el
-        mercado. <br> <br>
-        Creemos en el gran poder de la publicidad y el marketing para transformar marcas y negocios. Por eso, nos esforzamos por
-        trabajar de manera cercana con nuestros clientes para entender sus necesidades y objetivos, y así crear estrategias que
-        generen impacto y resultados. <br> <br>
-        Si nos pides que nos describamos con tres palabras, usaríamos: "pasión", "creatividad" e "integridad", valores que
-        consideramos clave para ofrecer servicios auténticos y eficientes.</p>
-            <br>
-
+  <p class="text-center text-ours">
+    ¡Es un placer saludarte! Somos Onspace, una agencia de publicidad
+    especializada en potencializar marcas tanto en el ámbito físico como
+    digital, con el objetivo de mejorar su presencia y apariencia para lograr su
+    posicionamiento en el mercado. <br />
+    <br />
+    Creemos en el gran poder de la publicidad y el marketing para transformar
+    marcas y negocios. Por eso, nos esforzamos por trabajar de manera cercana
+    con nuestros clientes para entender sus necesidades y objetivos, y así crear
+    estrategias que generen impacto y resultados. <br />
+    <br />
+    Si nos pides que nos describamos con tres palabras, usaríamos: "pasión",
+    "creatividad" e "integridad", valores que consideramos clave para ofrecer
+    servicios auténticos y eficientes.
+  </p>
+  <br />
 </section>
 
 <section class="contact">
-    <br><br><br><br>
-    <h1 class="text-center">Contacto</h1> <br>
+  <br /><br /><br /><br />
+  <h1 class="text-center">Contacto</h1>
+  <br />
 
-    <form [formGroup]="ContactForm">
-        <input name="name" type="text" class="feedback-input" placeholder="Name" #name />
-        <input name="email" type="text" class="feedback-input" placeholder="Email" #email />
-        <input name="number" type="text" class="feedback-input" placeholder="Phone Number" #number />
-        <textarea name="message" type="text" class="feedback-input" placeholder="Message" #message></textarea>
-        <input type="submit" value="SUBMIT" (click)="sendEmail(name.value, email.value, number.value, message.value)" />
-    </form>
-<br><br>
+  <form [formGroup]="ContactForm">
+    <input
+      name="name"
+      type="text"
+      class="feedback-input"
+      placeholder="Name"
+      #name
+    />
+    <input
+      name="email"
+      type="text"
+      class="feedback-input"
+      placeholder="Email"
+      #email
+    />
+    <input
+      name="number"
+      type="text"
+      class="feedback-input"
+      placeholder="Phone Number"
+      #number
+    />
+    <textarea
+      name="message"
+      type="text"
+      class="feedback-input"
+      placeholder="Message"
+      #message
+    ></textarea>
+    <input
+      type="submit"
+      value="SUBMIT"
+      (click)="sendEmail(name.value, email.value, number.value, message.value)"
+    />
+  </form>
+  <br /><br />
 </section>
 
-<section class="map">
-
-</section>
-
-
-
-       
-
-
-
-       
-
+<section class="map"></section>
