--- a/src/app/Shared/not-found/not-found.component.html
+++ b/src/app/Shared/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 
 <br><br><br>
-<div class="container">
+<div class="container d-flex justify-content-center">
 <img src="./assets/img/404.png" class=" img-fluid not-found" alt="...">
 </div>
