--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -1,16 +1,9 @@
-<!-- <div class="waves-back" >
 
-    <iframe class="frame-back" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0" width="100%"
-        height="100%" allowfullscreen allow="autoplay"></iframe>
-
-        </div> -->
 
 <section class="home-section">
-  <br />
-  <!-- <div class="columns container m-auto bg-danger justify-content-around"> -->
+  <br>
   <div class="container columns__container m-auto">
     <div class="columns">
-      <!-- <div class="column text-center bg-warning d-flex justify-content-center"> -->
       <div class="column" id="column__left">
         <div class="caption">
           ¿LISTO PA' <br />
@@ -27,7 +20,8 @@
 
           <div class="text-center">
             <button class="btn-form text-center" routerLink="/form">
-              ¡Hagámoslo!
+              <p class="text_button">¡Hagámoslo!</p>
+              
             </button>
           </div>
         </div>
