--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -43,107 +43,17 @@ img {
 
 //Home-Section
 
-@keyframes rollDown {
-  0% {
-    top: -200px;
-    transform: rotateX(-90deg);
-  }
-
-  11% {
-    top: -74px;
-    transform: rotateX(0deg);
-    opacity: 1;
-  }
-
-  22% {
-    top: -74px;
-    transform: rotateX(0deg);
-    opacity: 1;
-  }
-
-  33% {
-    top: 50px;
-    transform: rotateX(30deg);
-    opacity: 0;
-  }
-}
-
-@keyframes rollDown2 {
-  33% {
-    top: -200px;
-    transform: rotateX(-90deg);
-  }
-
-  44% {
-    top: -74px;
-    transform: rotateX(0deg);
-    opacity: 1;
-  }
-
-  55% {
-    top: -74px;
-    transform: rotateX(0deg);
-    opacity: 1;
-  }
-
-  66% {
-    top: 50px;
-    transform: rotateX(30deg);
-    opacity: 0;
-  }
-}
-
-@keyframes rollDown3 {
-  66% {
-    top: -200px;
-    transform: rotateX(-90deg);
-  }
-
-  77% {
-    top: -74px;
-    transform: rotateX(0deg);
-    opacity: 1;
-  }
-
-  88% {
-    top: -74px;
-    transform: rotateX(0deg);
-    opacity: 1;
-  }
-
-  99% {
-    top: 50px;
-    transform: rotateX(30deg);
-    opacity: 0;
-  }
-}
-
-//Button
-.btn-form {
-  border-radius: 25px;
-  border: none;
-  background-color: #fcbd07;
-  color: #1d95d3;
-  font-weight: 900;
-  justify-content: center;
-  position: relative;
-
-  @media (max-width: 550px) {
-    flex-flow: column wrap;
-    font-size: 45px;
-    justify-content: center;
-  }
-}
-
 .home-section {
   background-color: #1d95d3;
 }
+
 .columns__container {
-   display: flex;
-   flex-direction: column;
-   padding-top: 50px;
- 
+  display: flex;
+  flex-direction: column;
+  padding-top: 22px;
+
 }
+
 .columns {
   display: flex;
   width: 100%;
@@ -170,20 +80,44 @@ img {
     flex-direction: column;
 
     .columns {
-       display: flex;
-       padding: 10px;
-       width: 100%;
-       justify-content: center;
+      display: flex;
+      padding: 10px;
+      width: 100%;
+      justify-content: center;
     }
 
     .column {
       width: 100%;
     }
 
-  
+
   }
 }
 
+//Button
+.btn-form {
+  border-radius: 60px;
+  border: none;
+  border-color: #E8E7E7;
+  // box-shadow: 10px 5px 5px rgb(0, 0, 0);
+  background-color: #E8E7E7;
+  justify-content: center;
+  position: relative;
+
+  @media (max-width: 550px) {
+    flex-flow: column wrap;
+    font-size: 45px;
+    justify-content: center;
+  }
+}
+.text_button{
+  color: #1d95d3;
+  font-size: 60px;
+  margin:  2px 15px;
+  font-weight: 700;
+}
+
+//Text-animation
 .caption {
   line-height: 80px;
   font-size: 60px;
@@ -219,7 +153,7 @@ img {
   position: absolute;
   transform: rotateX(-90deg);
   opacity: 0;
-  text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+  // text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25); 
   animation-timing-function: ease;
 }
 
@@ -235,45 +169,83 @@ img {
     animation: rollDown3 10s forwards infinite;
   }
 
-.column {
-  // flex: 1;
-  // margin: 2px;
-  // padding: 10px;
-
-  // &:first-child {
-  //    margin-left: 0;
-  // }
-
-  // &:last-child {
-  //    margin-right: 0;
-  // }
-}
-
-/* 
-@media screen and (max-width: 980px) {
-   .columns .column {
-      margin-bottom: 5px;
-      flex-basis: 40%;
-
-      &:nth-last-child(2) {
-         margin-right: 0;
-      }
-
-      &:last-child {
-         flex-basis: 100%;
-         margin: 20px;
-      }
+ @keyframes rollDown {
+   0% {
+     top: -200px;
+     transform: rotateX(-90deg);
    }
-} */
 
-// @media screen and (max-width: 680px) {
-//    .columns .column {
-//       flex-basis: 100%;
-//       margin: 0 0 5px 0;
-//    }
-// }
+   11% {
+     top: -74px;
+     transform: rotateX(0deg);
+     opacity: 1;
+   }
 
-// Services
+   22% {
+     top: -74px;
+     transform: rotateX(0deg);
+     opacity: 1;
+   }
+
+   33% {
+     top: 50px;
+     transform: rotateX(30deg);
+     opacity: 0;
+   }
+ }
+
+ @keyframes rollDown2 {
+   33% {
+     top: -200px;
+     transform: rotateX(-90deg);
+   }
+
+   44% {
+     top: -74px;
+     transform: rotateX(0deg);
+     opacity: 1;
+   }
+
+   55% {
+     top: -74px;
+     transform: rotateX(0deg);
+     opacity: 1;
+   }
+
+   66% {
+     top: 50px;
+     transform: rotateX(30deg);
+     opacity: 0;
+   }
+ }
+
+ @keyframes rollDown3 {
+   66% {
+     top: -200px;
+     transform: rotateX(-90deg);
+   }
+
+   77% {
+     top: -74px;
+     transform: rotateX(0deg);
+     opacity: 1;
+   }
+
+   88% {
+     top: -74px;
+     transform: rotateX(0deg);
+     opacity: 1;
+   }
+
+   99% {
+     top: 50px;
+     transform: rotateX(30deg);
+     opacity: 0;
+   }
+ }
+
+
+//Services-section
 
 .services-section {
   background-color: #e8e7e7;
