--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -110,6 +110,11 @@ img {
     justify-content: center;
   }
 }
+
+.btn-form:hover{
+  background-color: #fcbd07;
+}
+
 .text_button{
   color: #1d95d3;
   font-size: 60px;
