--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -14,7 +14,7 @@
             <div>MODERNIZAR</div>
           </div>
           <br />
-          TU MARCA
+          TU MARCA?
           <br />
           <br />
 
