--- a/src/app/features/page/Team/team/team.component.html
+++ b/src/app/features/page/Team/team/team.component.html
@@ -1,9 +1,6 @@
-<!-- <div class="waves">
-
-    <iframe class="frame" src="https://streamable.com/e/zxcjcw?autoplay=1&nocontrols=1" frameborder="0" width="100%"
-        height="100%" allowfullscreen allow="autoplay"></iframe>
-</div> -->
-
-<img src="./assets/img/PROXIMAMENTE.png" class="img-fluid not-found" alt="...">
+<br><br><br>
+<div class="container d-flex justify-content-center">
+    <img src="./assets/img/PROX.png" class=" img-fluid prox" alt="...">
+</div>
 
 
