--- a/src/app/features/page/Team/team/team.component.scss
+++ b/src/app/features/page/Team/team/team.component.scss
@@ -1,9 +1,18 @@
  * {
      font-family: "Arquitecta", sans-serif;
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
+    //  margin: 0;
+    //  padding: 0;
+    //  box-sizing: border-box;
  }
 
+.prox {
 
+    width: 50%;
+    height: 50%;
+
+    @media (max-width: 450px) {
+        flex-flow: column wrap;
+        width: 100%;
+    }
+}
 
