Adding icons in footer

--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -44,6 +44,35 @@
     </div>
     
 
+<div class="container d-flex justify-content-center m-auto">
+<ul class="wrapper">
+    <li class="icon facebook">
+        <span class="tooltip">Facebook</span>
+        <span><i class="bi bi-facebook-f"></i></span>
+    </li>
+    <li class="icon twitter">
+        <span class="tooltip">Twitter</span>
+        <span><i class="bi bi-twitter"></i></span>
+    </li>
+    <li class="icon instagram">
+        <span class="tooltip">Instagram</span>
+        <span><i class="bi bi-instagram"></i></span>
+    </li>
+
+    <a href="https://wa.me/18492652584">
+        <li class="icon whatsapp">
+            <span class="tooltip">Whatsapp</span>
+            <span><i class="bi bi-whatsapp"></i></span>
+        </li>
+    </a>
+    <li class="icon tiktok">
+        <span class="tooltip">Tiktok</span>
+        <span><i class="bi bi-tiktok"></i></span>
+    </li>
+</ul>
+</div>
+<br>
    <b> <p class="text-center text" style="font-size: 20px;">© Todos los derechos reservados</p></b>
+
 <br>
 </section>
