--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -63,49 +63,49 @@
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+          style="background-image: url(./assets/img/Services-img/1.jpg)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+          style="background-image: url(./assets/img/Services-img/2.jpg)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+          style="background-image: url(./assets/img/Services-img/3.jpg)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_1.png)"
+          style="background-image: url(./assets/img/Services-img/4.jpg)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+          style="background-image: url(./assets/img/Services-img/5.jpg)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+          style="background-image: url(./assets/img/Services-img/6.jpg)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+          style="background-image: url(./assets/img/Services-img/7.jpg)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/prueba_2.png)"
+          style="background-image: url(./assets/img/Services-img/8.jpg)"
         ></div>
       </li>
     </div>
