--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -34,9 +34,7 @@
 
             <div class="column">
                 <b>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
-                    porttitor sed morbi laoreet aliquam cras nostra
-                    tincidunt</p></b>
+                <p class="text">Expande tu marca hasta el universo</p></b>
             </div>
     
         </div>
