adding social media in footer section

--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -34,7 +34,7 @@
 
             <div class="column">
                 <b>
-                <p class="text">Expande tu marca hasta el universo</p></b>
+                <p class="text" style="margin: 10% auto">Expande tu marca hasta el universo</p></b>
             </div>
     
         </div>
@@ -46,26 +46,28 @@
 <ul class="wrapper">
     <li class="icon facebook">
         <span class="tooltip">Facebook</span>
-        <span><i class="bi bi-facebook-f"></i></span>
+        <img src="./assets/img/Social-media/facebook.svg" alt="">
     </li>
     <li class="icon twitter">
         <span class="tooltip">Twitter</span>
-        <span><i class="bi bi-twitter"></i></span>
+        <img src="./assets/img/Social-media/twitter.svg" alt="">
     </li>
+    <a href="https://www.instagram.com/onspaceagency/" target="_blank">
     <li class="icon instagram">
         <span class="tooltip">Instagram</span>
-        <span><i class="bi bi-instagram"></i></span>
+    <img src="./assets/img/Social-media/instagram.svg" alt="">
     </li>
+    </a>
 
-    <a href="https://wa.me/18492652584">
+    <a href="https://wa.me/18492652584" target="_blank">
         <li class="icon whatsapp">
             <span class="tooltip">Whatsapp</span>
-            <span><i class="bi bi-whatsapp"></i></span>
+        <img src="./assets/img/Social-media/whatsapp.svg" alt="">
         </li>
     </a>
     <li class="icon tiktok">
         <span class="tooltip">Tiktok</span>
-        <span><i class="bi bi-tiktok"></i></span>
+        <img src="./assets/img/Social-media/tiktok.svg" alt="">
     </li>
 </ul>
 </div>
