Adding img in home

--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -44,10 +44,12 @@
 
 <div class="container d-flex justify-content-center m-auto">
 <ul class="wrapper">
+    <a href="https://www.facebook.com/profile.php?id=100092483145253" target="_blank">
     <li class="icon facebook">
         <span class="tooltip">Facebook</span>
         <img src="./assets/img/Social-media/facebook.svg" alt="">
     </li>
+    </a>
     <li class="icon twitter">
         <span class="tooltip">Twitter</span>
         <img src="./assets/img/Social-media/twitter.svg" alt="">
