--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -116,7 +116,7 @@
 
 <section class="ours">
   <br />
-  <h1 class="text-center">Quienes somos?</h1>
+  <h1 class="text-center">¿Quiénes somos?</h1>
   <br />
 
   <p class="text-center text-ours">
