--- a/src/app/Shared/header/header.component.html
+++ b/src/app/Shared/header/header.component.html
@@ -8,10 +8,10 @@
             
             <nav class="text-center">
                 <br>
-                <a href="/home">Home</a> 
+                <a href="/home">Inicio</a> 
                 <a href="/team">Team</a>
                 <a href="/portafolio">Portafolio</a>
-                <a href="/contact">Contact</a>
+                <a href="/contact">Contacto</a>
                 
             </nav>
                     <div class="container">
