--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -41,71 +41,16 @@
         <div class="wrapper-portafolio">
             <div class="cols">
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container-portafolio">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                    <div class="container-portafolio" *ngFor="let Portfolio of portfolio">
+                        <div class="front" style="background-image: url({{Portfolio.cover_page}})">
                             <div class="inner">
-                                <p>Nombre del portafolio</p>
-                                <span>Compania</span>
+                                <p>{{Portfolio.name}}</p>
+                                <span>{{Portfolio.companyId}}</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
-                                    suscipit c.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="cols">
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container-portafolio">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
-                            <div class="inner">
-                                <p>Nombre del portafolio</p>
-                                <span>Compania</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
-                                    suscipit c.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="cols">
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container-portafolio">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
-                            <div class="inner">
-                                <p>Nombre del portafolio</p>
-                                <span>Compania</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
-                                    suscipit c.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="cols">
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container-portafolio">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
-                            <div class="inner">
-                                <p>Nombre del portafolio</p>
-                                <span>Compania</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae
-                                    suscipit c.</p>
+                                <p>{{Portfolio.description}}</p>
                             </div>
                         </div>
                     </div>
