--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.scss
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.scss
@@ -81,8 +81,8 @@ h1 {
 }
 
 .wrapper-portafolio {
-    width: 90%;
-    margin: 0 auto;
+    width: 60%;
+    margin: 0 auto 10px;
     max-width: 80rem;
 }
 
