--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -45,7 +45,7 @@
                         <div class="front" style="background-image: url({{Portfolio.cover_page}})">
                             <div class="inner">
                                 <p>{{Portfolio.name}}</p>
-                                <span>{{Portfolio.companyId}}</span>
+                                <span>{{Portfolio.companyId.name}}</span>
                             </div>
                         </div>
                         <div class="back">
