--- a/src/app/Shared/header/header.component.scss
+++ b/src/app/Shared/header/header.component.scss
@@ -45,7 +45,7 @@ nav a:hover{
     left: 0;
     width: 100%;
     height: 100px;
-    background-image: url('/./assets/img/wave.png');
+    background-image: url('https://lh3.googleusercontent.com/drive-viewer/AFGJ81rRsOSD-q_WQYvU2n_MF-sMuAzaiW99u7sh1ZQRdIqndrb5_N_zkdp8kBJDlyvroKHnP_w7vpt14hRceGxLmdqr1jzb=w1920-h929');
     background-size: 1000px 100px;
     animation: wave 3s linear infinite;
 }
