--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -1,7 +1,7 @@
 
 
 <section class="home-section">
-  <br>
+  <br> <br>
   <div class="container columns__container m-auto">
     <div class="columns">
       <div class="column" id="column__left">
@@ -30,7 +30,7 @@
       <div class="column" id="column__right">
         <div class="max-logo">
           <img
-            src="./assets/img/Onspace_wave.png"
+            src="https://lh3.googleusercontent.com/drive-viewer/AFGJ81rtW2oEmUYcjhNkZdUwvFrVHY1bYL4wlIAPZB7cGqZBQF4CJwDSWp47klMYMLYIQ0y-i2b2ZVR_kOVyr__2dOlTF0ff=w1920-h929"
             class="img-fluid"
             alt="Onspace"
           />
@@ -63,49 +63,49 @@
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/1.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81oXjxfORIZpom1y8hFKdFXq1MxSpbmG7CqikZ2tpeYzmhw4QFdrenkHjVjLgfFgay8bx6pFUdzdcnHk5n4Cbe7OyPw5=w1920-h929)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/2.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81qccdPb_wa2Nvo4RHs2L8BG1AcVkcvs_XCBwz8H-OZ6fZkAMviBmjZNDIqsqLg-LL3gGepaMK4T_hiluziiwYniP8QSUg=w1920-h929)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/3.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81rEoqo9CDrAyWilOL3NvNOUilRIolzbFP5vSWUXpd1YBtVSF-CuiAa16utwfb7wQw9Wu4n7Mc7ef-iVhRYbxWAi0MLzkg=w1920-h929)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/4.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81oXxKf9NzQnvUfg9gtH001Z2utmTBA6xDyNJV0W30oWMgMFdUM1ImqZPzV23xb9j5vG1Ue5w6T2NTGe4I_reveiosaM-A=w1920-h929)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/5.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81rQBrcjFz00Xm5gn6IAz04ks_OJzlInlaiYtF6p-_4i3YB7UOzjsWvtQxoBEEC4vnwC7HSQf3ynB2dKMWVR96BAhew-vg=w1920-h929)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/6.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81qQwhKyBXJcJFIR3LsJIuK3yLGpJJn_jZfU7-htPgRY937T_d5Iij8nJ0Nlb5k5dBG-yA3xChthnyYz7I44t4ZCSk39cA=w1920-h929)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/7.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81o6JeYanHsxvEoFpXVPvygTdW_R_vdyKdXt1HV_oq77HpvADqrbNfQiceB69avjL-acVzssI1cbKD0JBldQKdOx49Et=w1920-h929)"
         ></div>
       </li>
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(./assets/img/Services-img/8.jpg)"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81oQBE3iE-XA0793sKt5BMX4ZlqQ1QNvn9IOszbPDjeic7c5ypVq-jLJDZf4_mcgmy7VZg3HTfn9oCafSRl-R-JD4WJdEw=w1920-h929)"
         ></div>
       </li>
     </div>
