--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -8,7 +8,7 @@
             <div class="column">
                 <figure class="figure">
                     <div class="max-logo text-center">
-                        <img src="./assets/img/Onspace_wave.png"
+                        <img src="https://lh3.googleusercontent.com/drive-viewer/AFGJ81rtW2oEmUYcjhNkZdUwvFrVHY1bYL4wlIAPZB7cGqZBQF4CJwDSWp47klMYMLYIQ0y-i2b2ZVR_kOVyr__2dOlTF0ff=w1920-h929"
                             class="figure-img img-fluid rounded"
                             alt="A generic square placeholder image with rounded corners in a figure.">
                     </div>
